--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "electron": "^3.0.0"
   },
   "dependencies": {
-    "fs-extra": "^7.0.0"
+    "fs-extra": "^7.0.0",
+    "jquery": "^3.3.1"
   }
 }
