--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.1",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "postinstall": "install-app-deps"
   },
   "devDependencies": {
-    "electron": "^3.0.0"
+    "electron": "^3.0.0",
+    "electron-builder": "^21.2.0",
+    "electron-rebuild": "^1.8.6"
   },
   "dependencies": {
     "fs-extra": "^7.0.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.4.1",
+    "sqlite3": "^4.1.0"
   }
 }
